# gc

./: .env.example  .gitignore  Dockerfile  Dockerfile.production  config.yaml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  monitoring_config.py  performance_improvements.py  preheat_cache.py  refactor_plan.md  requirements.txt  run_stock_update.sh  security_enhancements.py  stock_analysis_api.py  test_cost_analysis.py  test_server.py  update_a_stock.py
TRAE/telegram bot/: .env.example  .env.production.example  .gitignore  Dockerfile  E2E_TEST_MANUAL.md  README.md  TESTING_GUIDE.md  alembic.ini  check_tables.py  clear_webhook.py  create_db.py  docker-compose.prod.yml  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  requirements.txt  run_bot_test.py  run_full_tests.sh  run_local_tests.sh  simple_bot_test.py  start.sh  start_e2e_env.sh  start_simple_api.py  telegram_bot.db.backup  test_ai_moderation.py  test_ai_moderation_new.py  test_api_only.py  test_bot.py  test_bot_simple.py  test_connection.py  test_database.py  test_e2e.py  test_local_e2e.py  test_locust.py  test_media_upload.py  test_media_upload_comprehensive.py  test_merchant_onboarding.py  test_moderation_flow.py  test_monitoring.py  (+5 more)
TRAE/telegram bot/.github/workflows/: cd.yml  ci.yml
TRAE/telegram bot/.qoder/rules/: 6A.md
TRAE/telegram bot/app/: __init__.py  config.py  main.py
TRAE/telegram bot/app/api/: __init__.py  deps.py
TRAE/telegram bot/app/api/v1/: ads.py  (+9 more)
TRAE/telegram bot/app/bot/: __init__.py  main.py  states.py
TRAE/telegram bot/app/core/: __init__.py  celery_app.py  database.py  exceptions.py  logging.py  logging_config.py  middleware.py  redis.py  security.py
TRAE/telegram bot/app/models/: __init__.py  ad.py  ai_review_log.py  base.py  category.py  favorite.py  merchant.py  product.py  region.py  user.py
TRAE/telegram bot/app/schemas/: __init__.py  ad.py  category.py  common.py  media.py  merchant.py  product.py  user.py
TRAE/telegram bot/app/services/: __init__.py  ad_service.py  category_service.py  local_file_storage.py  merchant_service.py  moderation_service.py  product_service.py  user_service.py
TRAE/telegram bot/app/tasks/: __init__.py  moderation.py
TRAE/telegram bot/app/templates/: index.html
TRAE/telegram bot/app/websocket/: connection_manager.py
TRAE/telegram bot/app/workers/: moderation_worker.py
TRAE/telegram bot/docs/: ACCEPTANCE_FIX_ISSUES.md  AI_MODERATION_ARCHITECTURE.md  ALIGNMENT_FIX_ISSUES.md  APPROVAL_FIX_ISSUES.md  CELERY_ARCHITECTURE.md  COMPREHENSIVE_TESTING_REPORT.md  CONSENSUS_FIX_ISSUES.md  DESIGN_FIX_ISSUES.md  FINAL_FIX_ISSUES.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_Project_Summary.md  FINAL_TEST_SUMMARY.md  MEDIA_UPLOAD_GUIDE.md  P4.8_CONSENSUS_堡垒之门：实现_API_认证与授权.md  P4.8_FINAL_堡垒之门：实现_API_认证与授权.md  P4.8_TODO_堡垒之门：实现_API_认证与授权.md  P8_1_CI_CD_Pipeline.md  PROJECT_SUMMARY.md  STORAGE_ARCHITECTURE.md  TASK_FIX_ISSUES.md  TESTING_REPORT.md  TODO_FIX_ISSUES.md  TODO_Project_Next_Steps.md  UPDATE_LOG.md  mini-app-architecture.md
TRAE/telegram bot/docs/6A_WORKFLOW/: ACCEPTANCE_6A_WORKFLOW.md  ACCEPTANCE_P4_2.md  ALIGNMENT_6A_WORKFLOW.md  ALIGNMENT_P4_2.md  CONSENSUS_6A_WORKFLOW.md  CONSENSUS_P4_2.md  DESIGN_6A_WORKFLOW.md  DESIGN_P4_2.md  FINAL_6A_WORKFLOW.md  FINAL_P4_2.md  TASK_6A_WORKFLOW.md  TASK_P4_2.md  TODO_6A_WORKFLOW.md  TODO_P4_2.md
TRAE/telegram bot/docs/P4.7/: ACCEPTANCE_P4.7.md  ALIGNMENT_P4.7.md  CONSENSUS_P4.7.md  DESIGN_P4.7.md  FINAL_P4.7.md  TASK_P4.7.md  TODO_P4.7.md
TRAE/telegram bot/frontend/: Dockerfile  Dockerfile.dev
TRAE/telegram bot/migrations/: env.py
TRAE/telegram bot/scripts/: init-db.sql  redis.conf  start.sh
TRAE/telegram bot/tests/: test_api.py  test_api_endpoints.py  test_core_modules.py  test_health_api.py  test_products.py  test_products_comprehensive.py  test_products_unit.py  test_products_unit_only.py
(+151 files in other folders)
